# cpp-tools

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  manifest.yaml
clap/: CMakeLists.txt  manifest.yaml
clap/include/: arg.hpp  clap.hpp
clap/test/: CMakeLists.txt  test_clap.cc
manifesto/: CMakeLists.txt  manifest.yaml
manifesto/include/: emitter.hpp  kvi.hpp  manifesto.hpp  parser.hpp
manifesto/lib/: info.hpp  is_valid.hpp
manifesto/src/: manifesto.cc
manifesto/test/: CMakeLists.txt  test_manifest.yaml  test_manifesto.cc
scaffold/: CMakeLists.txt  README.md  manifest.yaml
scaffold/lib/: scaffold.hpp
scaffold/lib/tpl/: class.tpl  cmake.tpl  cmake_app.tpl  cmake_header_lib.tpl  cmake_header_only.tpl  cmake_shared_lib.tpl  header.tpl  source.tpl
scaffold/src/: scaffold.cc
test/test/: CMakeLists.txt
tpl/: CMakeLists.txt  README.md  manifest.yaml
tpl/include/: tpl.hpp
tpl/test/: CMakeLists.txt  test_tpl.cc
